// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageBalances has the expected html structure 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <div>
            Balance
          </div>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <div>
            
          </div>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                    <div
                      class="label"
                    >
                      Refresh
                    </div>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <modal-search
      type="balances"
    />
    <section
      class="ni-part"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Your Address
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <div
            class="ni-li-copy"
          >
            <div
              class="value"
            >
              
            </div>
            <menu>
              <button
                class="ni-btn btn-copy"
              >
                <span
                  class="ni-btn-container"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn-icon material-icons"
                  >
                    content_copy
                  </i>
                  <span
                    class="ni-btn-value"
                  >
                    Copy
                  </span>
                </span>
              </button>
            </menu>
          </div>
        </main>
      </div>
    </section>
    <section
      class="ni-part"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Denomination Balances
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <!---->
          <a
            class="ni-li ni-li-link proposal-enter proposal-enter-active"
            href="#/wallet/send"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  FERMION
                </div>
                <div
                  class="ni-li-dd"
                >
                  456
                </div>
              </div>
              <button
                class="ni-btn btn__primary"
              >
                <span
                  class="ni-btn-container ni-btn-icon-right"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn-icon material-icons"
                  >
                    chevron_right
                  </i>
                  <span
                    class="ni-btn-value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
          <a
            class="ni-li ni-li-link proposal-enter proposal-enter-active"
            href="#/wallet/send"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  ATOM
                </div>
                <div
                  class="ni-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="ni-btn btn__primary"
              >
                <span
                  class="ni-btn-container ni-btn-icon-right"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn-icon material-icons"
                  >
                    chevron_right
                  </i>
                  <span
                    class="ni-btn-value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
        </main>
      </div>
    </section>
    <section
      class="ni-part"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Network Denominations
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        />
      </div>
    </section>
  </main>
</div>
`;

exports[`PageBalances should filter the balances 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <div>
            Balance
          </div>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <div>
            
          </div>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                    <div
                      class="label"
                    >
                      Refresh
                    </div>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <modal-search
      type="balances"
    />
    <section
      class="ni-part"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Your Address
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <div
            class="ni-li-copy"
          >
            <div
              class="value"
            >
              
            </div>
            <menu>
              <button
                class="ni-btn btn-copy"
              >
                <span
                  class="ni-btn-container"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn-icon material-icons"
                  >
                    content_copy
                  </i>
                  <span
                    class="ni-btn-value"
                  >
                    Copy
                  </span>
                </span>
              </button>
            </menu>
          </div>
        </main>
      </div>
    </section>
    <section
      class="ni-part"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Denomination Balances
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        >
          <!---->
          <a
            class="ni-li ni-li-link proposal-leave proposal-leave-active"
            href="#/wallet/send"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  FERMION
                </div>
                <div
                  class="ni-li-dd"
                >
                  456
                </div>
              </div>
              <button
                class="ni-btn btn__primary"
              >
                <span
                  class="ni-btn-container ni-btn-icon-right"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn-icon material-icons"
                  >
                    chevron_right
                  </i>
                  <span
                    class="ni-btn-value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
          <a
            class="ni-li ni-li-link proposal-enter proposal-enter-active"
            href="#/wallet/send"
          >
            <div
              class="ni-li-container"
            >
              <div
                class="ni-li-thumb"
              >
                <!---->
              </div>
              <div
                class="ni-li-dl"
              >
                <div
                  class="ni-li-dt"
                >
                  ATOM
                </div>
                <div
                  class="ni-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="ni-btn btn__primary"
              >
                <span
                  class="ni-btn-container ni-btn-icon-right"
                >
                  <i
                    aria-hidden="true"
                    class="ni-btn-icon material-icons"
                  >
                    chevron_right
                  </i>
                  <span
                    class="ni-btn-value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
        </main>
      </div>
    </section>
    <section
      class="ni-part"
    >
      <div
        class="ni-part-container"
      >
        <header
          class="ni-part-header"
        >
          <div
            class="ni-part-header-container"
          >
            <div
              class="ni-part-title h5"
            >
              Network Denominations
            </div>
            <menu
              class="ni-part-menu"
            />
          </div>
        </header>
        <main
          class="ni-part-main"
        />
      </div>
    </section>
  </main>
</div>
`;
